@@ -7,13 +7,10 @@ import com.mojang.logging.LogUtils;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
-import java.util.Collection;
-import java.util.Collections;
 import java.util.Enumeration;
 import java.util.List;
 import java.util.Locale;
 import java.util.Set;
-import java.util.function.Predicate;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipFile;
 import javax.annotation.Nullable;
@@ -24,70 +21,88 @@ import org.slf4j.Logger;
 public class ZipResourcePack extends AbstractFileResourcePack {
 	private static final Logger field_39096 = LogUtils.getLogger();
 	public static final Splitter TYPE_NAMESPACE_SPLITTER = Splitter.on('/').omitEmptyStrings().limit(3);
+	private final File backingZipFile;
 	@Nullable
 	private ZipFile file;
+	private boolean failedToOpen;
 
-	public ZipResourcePack(File file) {
-		super(file);
+	public ZipResourcePack(String name, File backingZipFile) {
+		super(name);
+		this.backingZipFile = backingZipFile;
 	}
 
-	private ZipFile getZipFile() throws IOException {
-		if (this.file == null) {
-			this.file = new ZipFile(this.base);
-		}
-
-		return this.file;
-	}
-
-	@Override
-	protected InputStream openFile(String name) throws IOException {
-		ZipFile zipFile = this.getZipFile();
-		ZipEntry zipEntry = zipFile.getEntry(name);
-		if (zipEntry == null) {
-			throw new ResourceNotFoundException(this.base, name);
+	@Nullable
+	private ZipFile getZipFile() {
+		if (this.failedToOpen) {
+			return null;
 		} else {
-			return zipFile.getInputStream(zipEntry);
+			if (this.file == null) {
+				try {
+					this.file = new ZipFile(this.backingZipFile);
+				} catch (IOException var2) {
+					field_39096.error("Failed to open pack {}", this.backingZipFile, var2);
+					this.failedToOpen = true;
+					return null;
+				}
+			}
+
+			return this.file;
 		}
 	}
 
+	private static String toPath(ResourceType type, Identifier id) {
+		return String.format(Locale.ROOT, "%s/%s/%s", type.getDirectory(), id.getNamespace(), id.getPath());
+	}
+
+	@Nullable
 	@Override
-	public boolean containsFile(String name) {
-		try {
-			return this.getZipFile().getEntry(name) != null;
-		} catch (IOException var3) {
-			return false;
+	public InputSupplier<InputStream> openRoot(String... segments) {
+		return this.openFile(String.join("/", segments));
+	}
+
+	@Override
+	public InputSupplier<InputStream> open(ResourceType type, Identifier id) {
+		return this.openFile(toPath(type, id));
+	}
+
+	@Nullable
+	private InputSupplier<InputStream> openFile(String path) {
+		ZipFile zipFile = this.getZipFile();
+		if (zipFile == null) {
+			return null;
+		} else {
+			ZipEntry zipEntry = zipFile.getEntry(path);
+			return zipEntry == null ? null : InputSupplier.create(zipFile, zipEntry);
 		}
 	}
 
 	@Override
 	public Set<String> getNamespaces(ResourceType type) {
-		ZipFile zipFile;
-		try {
-			zipFile = this.getZipFile();
-		} catch (IOException var9) {
-			return Collections.emptySet();
-		}
+		ZipFile zipFile = this.getZipFile();
+		if (zipFile == null) {
+			return Set.of();
+		} else {
+			Enumeration<? extends ZipEntry> enumeration = zipFile.entries();
+			Set<String> set = Sets.<String>newHashSet();
 
-		Enumeration<? extends ZipEntry> enumeration = zipFile.entries();
-		Set<String> set = Sets.<String>newHashSet();
-
-		while (enumeration.hasMoreElements()) {
-			ZipEntry zipEntry = (ZipEntry)enumeration.nextElement();
-			String string = zipEntry.getName();
-			if (string.startsWith(type.getDirectory() + "/")) {
-				List<String> list = Lists.<String>newArrayList(TYPE_NAMESPACE_SPLITTER.split(string));
-				if (list.size() > 1) {
-					String string2 = (String)list.get(1);
-					if (string2.equals(string2.toLowerCase(Locale.ROOT))) {
-						set.add(string2);
-					} else {
-						this.warnNonLowerCaseNamespace(string2);
+			while (enumeration.hasMoreElements()) {
+				ZipEntry zipEntry = (ZipEntry)enumeration.nextElement();
+				String string = zipEntry.getName();
+				if (string.startsWith(type.getDirectory() + "/")) {
+					List<String> list = Lists.<String>newArrayList(TYPE_NAMESPACE_SPLITTER.split(string));
+					if (list.size() > 1) {
+						String string2 = (String)list.get(1);
+						if (string2.equals(string2.toLowerCase(Locale.ROOT))) {
+							set.add(string2);
+						} else {
+							field_39096.warn("Ignored non-lowercase namespace: {} in {}", string2, this.backingZipFile);
+						}
 					}
 				}
 			}
-		}
 
-		return set;
+			return set;
+		}
 	}
 
 	protected void finalize() throws Throwable {
@@ -104,35 +119,28 @@ public class ZipResourcePack extends AbstractFileResourcePack {
 	}
 
 	@Override
-	public Collection<Identifier> findResources(ResourceType type, String namespace, String prefix, Predicate<Identifier> allowedPathPredicate) {
-		ZipFile zipFile;
-		try {
-			zipFile = this.getZipFile();
-		} catch (IOException var14) {
-			return Collections.emptySet();
-		}
+	public void findResources(ResourceType type, String namespace, String prefix, ResourcePack.ResultConsumer consumer) {
+		ZipFile zipFile = this.getZipFile();
+		if (zipFile != null) {
+			Enumeration<? extends ZipEntry> enumeration = zipFile.entries();
+			String string = type.getDirectory() + "/" + namespace + "/";
+			String string2 = string + prefix + "/";
 
-		Enumeration<? extends ZipEntry> enumeration = zipFile.entries();
-		List<Identifier> list = Lists.<Identifier>newArrayList();
-		String string = type.getDirectory() + "/" + namespace + "/";
-		String string2 = string + prefix + "/";
-
-		while (enumeration.hasMoreElements()) {
-			ZipEntry zipEntry = (ZipEntry)enumeration.nextElement();
-			if (!zipEntry.isDirectory()) {
-				String string3 = zipEntry.getName();
-				if (!string3.endsWith(".mcmeta") && string3.startsWith(string2)) {
-					String string4 = string3.substring(string.length());
-					Identifier identifier = Identifier.of(namespace, string4);
-					if (identifier == null) {
-						field_39096.warn("Invalid path in datapack: {}:{}, ignoring", namespace, string4);
-					} else if (allowedPathPredicate.test(identifier)) {
-						list.add(identifier);
+			while (enumeration.hasMoreElements()) {
+				ZipEntry zipEntry = (ZipEntry)enumeration.nextElement();
+				if (!zipEntry.isDirectory()) {
+					String string3 = zipEntry.getName();
+					if (string3.startsWith(string2)) {
+						String string4 = string3.substring(string.length());
+						Identifier identifier = Identifier.of(namespace, string4);
+						if (identifier != null) {
+							consumer.accept(identifier, InputSupplier.create(zipFile, zipEntry));
+						} else {
+							field_39096.warn("Invalid path in datapack: {}:{}, ignoring", namespace, string4);
+						}
 					}
 				}
 			}
 		}
-
-		return list;
 	}
 }
