@@ -5,6 +5,7 @@ import com.mojang.brigadier.CommandDispatcher;
 import com.mojang.brigadier.arguments.StringArgumentType;
 import com.mojang.brigadier.context.CommandContext;
 import com.mojang.brigadier.exceptions.CommandSyntaxException;
+import com.mojang.brigadier.exceptions.Dynamic2CommandExceptionType;
 import com.mojang.brigadier.exceptions.DynamicCommandExceptionType;
 import com.mojang.brigadier.suggestion.SuggestionProvider;
 import java.util.Collection;
@@ -13,6 +14,8 @@ import java.util.stream.Collectors;
 import net.minecraft.command.CommandSource;
 import net.minecraft.resource.ResourcePackManager;
 import net.minecraft.resource.ResourcePackProfile;
+import net.minecraft.resource.featuretoggle.FeatureFlags;
+import net.minecraft.resource.featuretoggle.FeatureSet;
 import net.minecraft.text.Text;
 import net.minecraft.text.Texts;
 
@@ -26,14 +29,24 @@ public class DatapackCommand {
 	private static final DynamicCommandExceptionType ALREADY_DISABLED_EXCEPTION = new DynamicCommandExceptionType(
 		name -> Text.translatable("commands.datapack.disable.failed", name)
 	);
+	private static final Dynamic2CommandExceptionType NO_FLAGS_EXCEPTION = new Dynamic2CommandExceptionType(
+		(name, flags) -> Text.translatable("commands.datapack.enable.failed.no_flags", name, flags)
+	);
 	private static final SuggestionProvider<ServerCommandSource> ENABLED_CONTAINERS_SUGGESTION_PROVIDER = (context, builder) -> CommandSource.suggestMatching(
 			context.getSource().getServer().getDataPackManager().getEnabledNames().stream().map(StringArgumentType::escapeIfRequired), builder
 		);
 	private static final SuggestionProvider<ServerCommandSource> DISABLED_CONTAINERS_SUGGESTION_PROVIDER = (context, builder) -> {
 		ResourcePackManager resourcePackManager = context.getSource().getServer().getDataPackManager();
 		Collection<String> collection = resourcePackManager.getEnabledNames();
+		FeatureSet featureSet = context.getSource().getEnabledFeatures();
 		return CommandSource.suggestMatching(
-			resourcePackManager.getNames().stream().filter(name -> !collection.contains(name)).map(StringArgumentType::escapeIfRequired), builder
+			resourcePackManager.getProfiles()
+				.stream()
+				.filter(profile -> profile.getRequestedFeatures().isSubsetOf(featureSet))
+				.map(ResourcePackProfile::getName)
+				.filter(name -> !collection.contains(name))
+				.map(StringArgumentType::escapeIfRequired),
+			builder
 		);
 	};
 
@@ -130,11 +143,12 @@ public class DatapackCommand {
 	private static int executeListAvailable(ServerCommandSource source) {
 		ResourcePackManager resourcePackManager = source.getServer().getDataPackManager();
 		resourcePackManager.scanPacks();
-		Collection<? extends ResourcePackProfile> collection = resourcePackManager.getEnabledProfiles();
-		Collection<? extends ResourcePackProfile> collection2 = resourcePackManager.getProfiles();
-		List<ResourcePackProfile> list = (List<ResourcePackProfile>)collection2.stream()
-			.filter(profile -> !collection.contains(profile))
-			.collect(Collectors.toList());
+		Collection<ResourcePackProfile> collection = resourcePackManager.getEnabledProfiles();
+		Collection<ResourcePackProfile> collection2 = resourcePackManager.getProfiles();
+		FeatureSet featureSet = source.getEnabledFeatures();
+		List<ResourcePackProfile> list = collection2.stream()
+			.filter(profile -> !collection.contains(profile) && profile.getRequestedFeatures().isSubsetOf(featureSet))
+			.toList();
 		if (list.isEmpty()) {
 			source.sendFeedback(Text.translatable("commands.datapack.list.available.none"), false);
 		} else {
@@ -174,7 +188,13 @@ public class DatapackCommand {
 			} else if (!enable && !bl) {
 				throw ALREADY_DISABLED_EXCEPTION.create(string);
 			} else {
-				return resourcePackProfile;
+				FeatureSet featureSet = context.getSource().getEnabledFeatures();
+				FeatureSet featureSet2 = resourcePackProfile.getRequestedFeatures();
+				if (!featureSet2.isSubsetOf(featureSet)) {
+					throw NO_FLAGS_EXCEPTION.create(string, FeatureFlags.printMissingFlags(featureSet, featureSet2));
+				} else {
+					return resourcePackProfile;
+				}
 			}
 		}
 	}
